--- a/src/components/ModalContent/ModalContent.module.css
+++ b/src/components/ModalContent/ModalContent.module.css
@@ -127,13 +127,13 @@
   }
 }
 
-@media (max-width: 580px) {
+@media (max-width: 768px) {
   .modalContentRenderTextLogoWindow {
     flex-direction: column-reverse;
     gap: 20px;
   }
   .modalContentRenderlogoPic {
-    width: 50%;
+    width: 40%;
   }
   .modalContentRenderCompanyTextBox {
     padding-right: 0px;
