--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -16,7 +16,15 @@
   font-weight: 400;
   line-height: 1.4;
   text-align: center;
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
 
 .cardsGrid {
@@ -27,6 +35,13 @@
   margin: auto;
   width: 100%;
 }
+
+/* @media (min-width: 1440px) {
+  .cardsGrid {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px;
+  }
+} */
 
 @media (max-width: 1279px) {
   .cardsGrid {
@@ -57,7 +72,13 @@
 
 @media (max-width: 428px) {
   .title {
-    display: inline;
+    position: static;
+    width: auto;
+    height: auto;
+    margin: 0;
+    clip: auto;
+    white-space: normal;
+    border: none;
   }
 }
 
